2009-12-08  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Darin Adler.

        Add asserts to RefCounted to make sure ref/deref happens on the right thread.
        https://bugs.webkit.org/show_bug.cgi?id=31639

        * loader/icon/IconRecord.cpp:
        (WebCore::IconRecord::IconRecord): Disable thread verification for this class because of its cross-thread use in IconDatabase.
        * platform/SharedBuffer.cpp:
        (WebCore::SharedBuffer::SharedBuffer): Ditto.
        * platform/text/StringImpl.cpp:
        (WebCore::StringImpl::StringImpl): Disable thread verification for this class, add FIXME to enforce proper usage via crossThreadString.
        * ForwardingHeaders/wtf/ThreadVerifier.h: Added.

2009-12-08  John Gregg  <johnnyg@google.com>

        Reviewed by Adam Barth.

        Inform the NotificationCenter when its window goes away in the same
        manner as other DOMWindow fields, and prevent invalid operations on
        it after that happens.

        As part of this, change the V8 bindings for notifications to call
        through the NotificationCenter rather than doing those operations
        itself.

        https://bugs.webkit.org/show_bug.cgi?id=31886

        Test: fast/notifications/notification-after-close.html

        * bindings/v8/custom/V8NotificationCenterCustom.cpp:
        (WebCore::CALLBACK_FUNC_DECL):
        * notifications/Notification.cpp:
        (WebCore::Notification::Notification):
        * notifications/NotificationCenter.cpp:
        (WebCore::NotificationCenter::checkPermission):
        (WebCore::NotificationCenter::requestPermission):
        * notifications/NotificationCenter.h:
        (WebCore::NotificationCenter::createHTMLNotification):
        (WebCore::NotificationCenter::createNotification):
        (WebCore::NotificationCenter::disconnectFrame):
        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::clear):

2009-12-08  Dan Bernstein  <mitz@apple.com>

        Reviewed by John Sullivan.